make dist version work

--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "x",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "buffers": "^0.1.1",
+    "chainsaw": "^0.1.0",
+    "install": "^0.1.8",
+    "npm": "^2.1.17"
+  },
   "devDependencies": {
     "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
